fixed bug - image was getting pushed to the right on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ li{
     justify-content: center;
     background-color: transparent;
     border-radius:5px;
-    padding: 50px;
+    padding: 200px;
     text-align: center; 
 }  
 #question {
